[ticket/12011] Fix the overlapping unapproved post icon.
PHPBB3-12011

--- a/phpBB/styles/prosilver/theme/bidi.css
+++ b/phpBB/styles/prosilver/theme/bidi.css
@@ -392,11 +392,14 @@ ul.linklist li.small-icon > a, ul.linklist li.breadcrumbs span:first-child > a {
 	float: right;
 }
 
+.rtl p.post-notice {
+	padding-left: 5px;
+	padding-right: 26px;
+}
+
 .rtl p.post-notice:before {
 	left: auto;
 	right: 0;
-	padding-left: 5px;
-	padding-right: 26px;
 }
 
 /* Topic review panel
